# VueFrontend

./: makefile  package-lock.json  package.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/core/: settings.py
frontend/: index.html  tailwind.config.js
frontend/src/components/: HomePage.vue  LoginPage.vue  RegisterPage.vue
frontend/src/router/: index.js
src/: App.vue
src/components/: NavbarPage.vue  RegisterPage.vue
