[tool.poetry]
name = "Dj"
version = "0.1.0"
description = ""
authors = ["chi <a27976566@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.1"
djangorestframework = "3.15.2"
python-dotenv = "1.0.1"
asgiref = "3.8.1"
cfgv = "3.4.0"
distlib = "0.3.8"
filelock = "3.16.1"
identify = "2.6.1"
nodeenv = "1.9.1"
platformdirs = "4.3.6"
pre-commit = "4.0.0"
pyyaml = "6.0.2"
sqlparse = "0.5.1"
virtualenv = "20.26.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
